--- a/styles.css
+++ b/styles.css
@@ -249,7 +249,7 @@ form .btn {
     #ia{
         padding: 0px;
         border: 0px;
-     
+       width: 350px;
 
     }
     
@@ -259,7 +259,7 @@ form .btn {
          
     }
     #ski{
-        
+        width: 300px;
         margin-left: 10px;
         padding-top: 20px;
         
