--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ h2{
 /*  */
 #carousel-container {
     width: 100%;
-    overflow: hidden;
+    overflow: hidden;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
     white-space: nowrap; /* Prevents the content from wrapping to a new line */
   }
   
@@ -212,12 +212,11 @@ form .btn {
     }
     .parallax-section {
         background: url('img/background4.jpg') no-repeat center center fixed;
-        background-size: contain;
+        background-size: cover;
         height:80vh ;
        background-repeat: no-repeat;
-       background-position-x: 0px;
-       background-position-y: 50px;
-        
+       
+        --max-width: 1200px;
         
         align-items: center;
         justify-content: center;
@@ -231,7 +230,7 @@ form .btn {
         
     }
     #svg-hero{
-        width: 400px;
+       --max-width: 1200px;
 
     }
     #svg-wave {
@@ -260,13 +259,13 @@ form .btn {
     #ia{
         padding: 0px;
         border: 0px;
-       width: 350px;
+       --max-width: 1200px;
 
     }
     
     
     #ski{
-        width: 300px;
+        --max-width: 1200px;
         margin-left: 10px;
         padding-top: 20px;
         
@@ -291,7 +290,7 @@ form .btn {
     }
     #z{
         
-        width: 320px;
+        --max-width: 1200px;
        
     }
     #zaay{
@@ -323,28 +322,115 @@ form .btn {
        
         
     }
-    #carousel-container img{
-       width:100px;
-	    height:90px;
-	    
+    #carousel-container1{
+        
+    overflow: hidden;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
+    white-space: nowrap; 
+       --max-width: 1200px;
+
         
     }
-   #carousel-content .section3{
-       margin-left:-120px;
-	    
-        
+    #section5{
+       
+      --max-width: 1200px;
     }
-    #section4{
-      width:300px;
+    #itt1{
+        --max-width: 1200px;
     }
+   
+  
+  #carousel-content2 {
+    display: inline-block;
+    --max-width: 1200px;
+    white-space: nowrap; /* Makes the logos sit side-by-side in a line */
+    animation: slide 30s linear infinite; /* Infinite scrolling animation */
+  }
+  
+  .section03 {
+   display: inline-block;
+    --max-width: 10px;
+    text-align: center;
+    margin: 0 20px;
+  }
+  .section03 img{
+    --max-width: 1200px;
+  }
     #contact{
         
     }
     #footer1{
         
     }
+
+    
     
 }
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+img {
+  display: flex;
+  width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.nav__links {
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  padding: 3.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 0.5rem;
+  background-color: var(--text-dark);
+  transition: 0.5s;
+  z-index: -1;
+  transform: translateY(-100%);
+  background: linear-gradient(90deg, rgba(4, 247, 255, 0.8) 0%, rgba(0,0,0,0.5) 100%);
+  padding-bottom: 0px;
+}
+
+.nav__links.open {
+  transform: translateY(0);
+}
+
+.nav__links a {
+  font-weight: 500;
+  color: var(--white);
+  
+}
+
+.nav__links a:hover {
+  color: var(--primary-color);
+}
+#ssaq{
+    list-style-type: none;
+    padding-bottom: 10px;
+    
+}
+
+
+
+
+
+
+
+
 #za{
     width: 500px;
     
